GGB-1251 fixed: [web] Tooltip in wrong position when first displayed
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@49774 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -1961,7 +1961,6 @@ body.application[dir=rtl] .gwt-Label.textIconButton {
 	box-shadow: 0px 0px 2px 1px rgba(102, 102, 102, 0.3);
 	z-index: 1000;
 	position: absolute;
-	left: 50%;
 	color: #FFFFFF;
 }
 
